Jaire specialists and footer white space fix

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ nav,
   background-color: #0077b6 !important;
   /* padding: 0.5em; */
 }
+
 /* nav a {
     color: white;
     text-decoration: none;
@@ -51,18 +52,21 @@ nav,
   display: flex;
   width: 100%;
   flex-direction: column;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   text-align: center;
   align-items: center;
-  margin-top: 40px; /* Agrega un margen superior para evitar superposiciones */
+  margin-top: 40px;
+  /* Agrega un margen superior para evitar superposiciones */
 }
 
 /* Estilos para cada pestaña */
 .pestaña {
   margin-bottom: 20px;
+  min-height: 100vh;
+
 }
 
 /* Estilos para los encabezados de sección */
@@ -113,6 +117,8 @@ h2 {
   font-size: 36px;
   margin: 0;
 }
+
+
 
 .quienessomos h2 {
   background-image: url("acerca.png");
@@ -379,22 +385,30 @@ h2 {
 /* Boton flotante */
 .font-control {
   position: fixed;
-  left: 10px; /* Ajusta la posición del botón flotante según tus preferencias */
+  left: 10px;
+  /* Ajusta la posición del botón flotante según tus preferencias */
   top: 50%;
   transform: translateY(-50%);
-  background: #0074d9; /* Color de fondo del botón */
-  color: #fff; /* Color del texto */
+  background: #0074d9;
+  /* Color de fondo del botón */
+  color: #fff;
+  /* Color del texto */
   border: none;
   border-radius: 50%;
-  width: 40px; /* Ancho del botón */
-  height: 40px; /* Altura del botón */
-  font-size: 20px; /* Tamaño de fuente del botón */
+  width: 40px;
+  /* Ancho del botón */
+  height: 40px;
+  /* Altura del botón */
+  font-size: 20px;
+  /* Tamaño de fuente del botón */
   cursor: pointer;
-  z-index: 1000; /* Asegura que esté en la parte superior de otros elementos */
+  z-index: 1000;
+  /* Asegura que esté en la parte superior de otros elementos */
 }
 
 .font-control:hover {
-  background: #0056b3; /* Cambia el color de fondo al pasar el ratón por encima */
+  background: #0056b3;
+  /* Cambia el color de fondo al pasar el ratón por encima */
 }
 
 .navbar-link.is-active,
@@ -405,17 +419,17 @@ a.navbar-item.is-active,
 a.navbar-item:focus,
 a.navbar-item:focus-within,
 a.navbar-item:hover {
-    background-color: #003875be !important;
+  background-color: #003875be !important;
 
 }
 
 /* .navbar-item.activo {
     color: #ffffff;
     border-bottom: 5px solid #ffffff;
-    /* margin-bottom: 10px; 
+    /* margin-bottom: 10px;
   } */
 
-  /* Estilos para el pie de página */
+/* Estilos para el pie de página */
 footer {
   text-align: center;
   background-color: #0077b6;
@@ -424,16 +438,15 @@ footer {
 
 
 .logo-footer {
-  width: 40%;
-  height: 40%;
+  width: 20vw;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .logo-footer {
-    width: 20%;
-    height: 20%;
+    width: 20vw;
+
   }
-  
+
 
 
 }
@@ -447,4 +460,13 @@ footer {
   font-size: 30px;
   font-weight: bold;
 
+}
+
+/* Standard styles for larger screens */
+
+/* Media query for smartphones */
+@media only screen and (max-width: 767px) {
+  .imagenes-inicio.mostrando {
+    display: flex;
+  }
 }
